# django-admin-tui

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pypi.yml
django_admin_tui/: __about__.py  tui.py
django_admin_tui/management/commands/: admin_tui.py
tests/: manage.py  settings.py  urls.py
tests/test_app/: admin.py  models.py
tests/test_app/migrations/: 0001_initial.py  0002_bar.py
